# prosthnet

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  setup.cfg
docs/: Makefile
docs/source/: conf.py  vne.rst
experiments/: Survey_vne.asv  Survey_vne.m  encoder3db.m  encoderBias.m  encoderKaiming.m  encoderKaimingIn.m  encoderKaimingOut.m  encoderTest.m  encoderTest19.m  encoderTrivial.m  encoderTrivial19.m  interfaceTest.py  paramsAll.mat  paramsTrivial.mat  paramstrivial19.mat  vneTest.py
src/vne/: __init__.py  constants.py  interface.py  model.py  persist.py
src/vne/models/: simpleModel_ini-3db.onnx  simpleModel_ini-Kaiming.onnx  simpleModel_ini-Trivial19.onnx  simpleModel_ini-bias.onnx  simpleModel_ini-kaimingIn.onnx  simpleModel_ini-kaimingOut.onnx  simpleModel_ini.onnx
