[metadata]
name = prosthnet
version = 0.0.1
authors = David Stoker
author_email = david.stoker@sri.com;david@stoker.org
description = intelligent neural interface for mapping sensor inputs to encoder driver inputs
long_description = file: README.md
long_description_content_type = text/markdown
;url = https://github.com/tbd
;project_urls =
;    Bug Tracker = https://github.com/tbd
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = vne
python_requires = >=3.8
install_requires =
    torch>=1.8
    numpy
    h5py
    scipy
    matplotlib
    typing
